--- a/code/HTML/Introduction.html
+++ b/code/HTML/Introduction.html
@@ -30,19 +30,19 @@
         <font color = "blue">HTML Styles</font>
         <hr>
         <a href="https://www.google.com/" target="_blank">Google</a><br><br><br>
-        <a href="Application.png"download >Download Image</a><br>
-        <a href="diploma.pdf"download >Download pdf</a><br>
-        <a href="audio1.m4a"download >Download Audio</a><br>
-        <a href="video1.mp4"download >Download Video</a><br>
+        <a href="src/Application.png"download >Download Image</a><br>
+        <a href="src/diploma.pdf"download >Download pdf</a><br>
+        <a href="src/audio1.m4a"download >Download Audio</a><br>
+        <a href="src/video1.mp4"download >Download Video</a><br>
         <!-- image tag and src-->
          <center>
-         <img src="Application.png" height="400px" width="600px">
+         <img src="src/Application.png" height="400px" width="600px">
         </center>
         <!-- video -->
          <!-- controls, muted, loop, autoplay -->
-        <video src="video1.mp4" controls loop muted autoplay height="400px" width="600px" ></video>
+        <video src="src/video1.mp4" controls loop muted autoplay height="400px" width="600px" ></video>
          <!-- Audio -->
-        <audio src="audio1.m4a" controls ></audio>
+        <audio src="src/audio1.m4a" controls ></audio>
     </body>
 
 </html>
