--- a/code/HTML/form_using_table.html
+++ b/code/HTML/form_using_table.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student Registration Form</title>
+    <style>
+        *{
+            color: aliceblue;
+        }
+    </style>
 </head>
 
 <body bgcolor="#ff6347">
