--- a/code/CSS/login.html
+++ b/code/CSS/login.html
@@ -15,7 +15,9 @@
                 display: flex;
                 justify-content: center;
                 margin-top: 100px;
-
+                box-shadow: 5px 10px 10px #aaaaaa;
+                overflow: hidden;
+                border-radius: 10px;
             }
 
             .child1,
@@ -24,19 +26,20 @@
                 width: 500px;
                 align-content: center;
                 justify-content: center;
-
+                padding-bottom: 10px;
             }
 
             .child1 {
-                background-color: grey;
-                border-top-left-radius: 10px;
-                border-bottom-left-radius: 10px;
-                box-shadow: 10px 10px 10px #aaaaaa;
-                overflow: hidden;
+                background-color: rgb(235, 232, 232);
+            }
+
+            h1 {
+                font-weight: bold;
+                font-size: 50px;
             }
 
             input {
-                background-color: #eee;
+                background-color: #d9d6d6;
                 border: none;
                 padding: 12px 15px;
                 margin: 8px 0;
@@ -56,40 +59,40 @@
                 transition: transform 80ms ease-in;
             }
 
+            button:hover {
+                transform: scale(1.3);
+            }
+
             .child2 {
                 background-color: red;
-                border-top-right-radius: 10px;
-                border-bottom-right-radius: 10px;
-                text-align: center;
                 color: white;
             }
         </style>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>HTML CSS Login Form</title>
     </head>
 
     <body>
         <div class="parent1">
             <div class="child1">
                 <center>
-                    <h1>login</h1>
-                    <i class="fa-brands fa-facebook fa-2x"></i>
-                    <i class="fa-brands fa-twitter fa-2x"></i>
-                    <h4>or use your account</h4>
+                    <h1>Login</h1><br>
+                    <i class="fa-brands fa-facebook fa-3x"></i>
+                    <i class="fa-brands fa-twitter fa-3x"></i>
+                    <h4>or use your account</h4><br>
                     <input type="email" name="email" placeholder="Email" /> <br><br>
                     <input type="password" name="password" placeholder="Password" /><br><br>
                     <button>Log In</button>
                 </center>
             </div>
             <div class="child2">
-                <h1>HTML CSS Login Form</h1>
-                <p>
-                    This login form is created using pure
-                    HIML and CSS for social icons.
-                    FontAwesome is used.
-                </p>
-
+                <center>
+                    <h1>HTML CSS Login Form</h1>
+                    <p>
+                        This login form is created using pure HIML and CSS for social icons.FontAwesome is used.
+                    </p>
+                </center>
             </div>
         </div>
     </body>
