--- a/code/CSS/work1.html
+++ b/code/CSS/work1.html
@@ -1,63 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <style>
-        #nav{
-            height: 100px;
-            width: 100%;
-            background-color: teal;
-        }
-        #parent1{
-            display: flex;
-            justify-content: space-around;
-            margin-top: 50px
-        }
-        #child1,#child2,#child3,#child4{
-            height: 300px;
-            width: 300px;
-            background-color: gray;
-            border-radius: 20px;
-            overflow: hidden;
-        }
-        img{
-            height: 250px;
-            width: 300px;
-            transition: transform 1s ease;
-        }
-        img:hover{
-            transform: scale(1.3);
-        }
-        h3{
-            text-align: center;
-            color: beige;
-        }
-    </style>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <div id="nav">
-        <h1 style="text-align: center; ">Image Gallery</h1>
-        <p style="text-align: center;""> A bunch of beautiful images that I didn't take </p>
+
+    <head>
+        <style>
+            #nav {
+                height: 100px;
+                width: 100%;
+                background-color: teal;
+            }
+
+            #parent1 {
+                display: flex;
+                justify-content: space-around;
+                margin-top: 50px
+            }
+
+            #child1,
+            #child2,
+            #child3,
+            #child4 {
+                height: 300px;
+                width: 300px;
+                background-color: rgb(235, 233, 233);
+                border-radius: 20px;
+                overflow: hidden;
+            }
+
+            img {
+                height: 250px;
+                width: 300px;
+                transition: transform 1s ease;
+            }
+
+            img:hover {
+                transform: scale(1.3);
+            }
+
+            h3 {
+                text-align: center;
+                color: beige;
+            }
+        </style>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+    </head>
+
+    <body>
+        <div id="nav">
+            <h1 style="text-align: center; ">Image Gallery</h1>
+            <p style="text-align: center;""> A bunch of beautiful images that I didn't take </p>
     </div>
-    <div id="parent1">
-        <div id="child1">
-            <img src="../../Assets/img/car1.webp">
-            <h3>Vecteezy</h3>
+    <div id=" parent1">
+            <div id="child1">
+                <img src="../../Assets/img/car1.webp">
+                <h3>Vecteezy</h3>
+            </div>
+            <div id="child2">
+                <img src="../../Assets/img/car2.jpg">
+                <h3>Cool</h3>
+            </div>
+            <div id="child3">
+                <img src="../../Assets/img/car3.jpg">
+                <h3>Bentley</h3>
+            </div>
+            <div id="child4">
+                <img src="../../Assets/img/car4.png">
+                <h3>Super</h3>
+            </div>
         </div>
-        <div id="child2">
-            <img src="../../Assets/img/car2.jpg">
-            <h3>Cool</h3>
-        </div>
-        <div id="child3">
-            <img src="../../Assets/img/car3.jpg">
-            <h3>Bentley</h3>
-        </div>
-        <div id="child4">
-            <img src="../../Assets/img/car4.png">
-            <h3>Super</h3>
-        </div>
-    </div>
-</body>
+    </body>
+
 </html>
