--- a/code/HTML/login.html
+++ b/code/HTML/login.html
@@ -17,9 +17,11 @@
                     <i class="fa-brands fa-facebook fa-3x"></i>
                     <i class="fa-brands fa-twitter fa-3x"></i>
                     <h4>or use your account</h4><br>
-                    <input type="email" name="email" placeholder="Email" /> <br><br>
-                    <input type="password" name="password" placeholder="Password" /><br><br>
-                    <button>Log In</button>
+                    <form>
+                        <input type="email" name="email" placeholder="Email" /> <br><br>
+                        <input type="password" name="password" placeholder="Password" /><br><br>
+                        <button>Log In</button>
+                    </form>
                 </center>
             </div>
             <div class="child2">
