--- a/code/HTML/register.html
+++ b/code/HTML/register.html
@@ -2,56 +2,7 @@
 <html lang="en">
 
     <head>
-        <style>
-            body {
-                background-color: #FAACA8;
-                background-image: linear-gradient(19deg, #FAACA8 0%, #d6d7f3 100%);
-                background-repeat: no-repeat;
-                background-size: cover;
-            }
-
-            .reg {
-                height: 500px;
-                width: 400px;
-                background-color: white;
-                border-radius: 20px;
-                margin-top: 100px;
-                margin-bottom: 100px;
-                margin-right: 200px;
-                margin-left: 200px;
-            }
-
-            h3 {
-                text-align: center;
-                padding: 20px 0 20px 0;
-            }
-
-            input {
-                height: 40px;
-                width: 250px;
-                border: none;
-                border-bottom: 1px solid black;
-            }
-
-            input:focus {
-                outline: none;
-            }
-
-            button {
-                border-radius: 30px;
-                background-color: rgb(229, 225, 225);
-                margin-top: 4px;
-                padding: 15px 32px;
-                height: 50px;
-                width: 200px;
-                font-size: 15px;
-                transition: transform 80ms ease-in;
-            }
-
-            button:hover {
-                transform: scale(1.3);
-            }
-        </style>
+        <link rel="stylesheet" href="../CSS/register.css">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Register</title>
