--- a/code/Bootstrap/flipkart.html
+++ b/code/Bootstrap/flipkart.html
@@ -14,15 +14,14 @@
         <nav class="navbar bg-body-tertiary">
             <div class="container-fluid">
                 <a class="navbar-brand"><img src="../../Assets/img/flipkart.svg" alt="Flipkart Logo"></a>
-                <form class="d-flex align-items-center ms-auto" role="search">
-                    <span class="input-group-append">
-                        <i class="fa-solid fa-magnifying-glass"></i>
-                        <input class="form-control me-2" type="search"
-                            placeholder="Search for Products, Brands and More" aria-label="Search">
-                    </span>
 
-                </form>
                 <form class="d-flex align-items-center ms-auto" role="search">
+                    <div class="input-group">
+                        <span class="input-group-text" id="basic-addon1"><i
+                                class="fa-solid fa-magnifying-glass search-icon"></i></span>
+                        <input type="text" class="form-control" placeholder="Search for Products, Brands and More"
+                            aria-label="Search" aria-describedby="basic-addon1">
+                    </div>
                     <button type="button" class="btn btn-light d-flex align-items-center gap-1">
                         <i class="fa-regular fa-circle-user"></i>
                         <span>Login</span>
@@ -38,6 +37,96 @@
                 </form>
             </div>
         </nav>
+        <div class="row">
+            <div class="col-lg-1 ">
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title">Special title treatment</h5>
+                  <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-1">
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title">Special title treatment</h5>
+                  <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-1">
+                <div class="card">
+                  <div class="card-body">
+                    <h5 class="card-title">Special title treatment</h5>
+                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-1">
+                <div class="card">
+                  <div class="card-body">
+                    <h5 class="card-title">Special title treatment</h5>
+                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-1">
+                <div class="card">
+                  <div class="card-body">
+                    <h5 class="card-title">Special title treatment</h5>
+                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-1">
+                <div class="card">
+                  <div class="card-body">
+                    <h5 class="card-title">Special title treatment</h5>
+                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-1">
+                <div class="card">
+                  <div class="card-body">
+                    <h5 class="card-title">Special title treatment</h5>
+                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                  </div>
+                </div>
+              </div>
+
+          </div>
+          <div id="carouselExampleRide" class="carousel slide" data-bs-ride="true">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="../../Assets/img/flip1.webp" style="height: 400px; width: 400px; object-fit: cover;" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="../../Assets/img/flip2.webp" style="height: 400px; width: 400px; object-fit: cover;"  class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="../../Assets/img/flip3.webp" style="height: 400px; width: 400px; object-fit: cover;"  class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="../../Assets/img/flip4.webp" style="height: 400px; width: 400px; object-fit: cover;"  class="d-block w-100" alt="...">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
     </body>
 
 </html>
